@@ -1,3 +1,8 @@
+2010-04-07  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* m/iris4d.h (UNEXEC): Move definition ...
+	* s/irix6-5.h (UNEXEC): ... here.
+
 2010-04-04  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* xfns.c (set_machine_and_pid_properties): New function.
